# gridlab-d-interface

./: .gitmodules  LICENSE  README.md
src/: CMakeLists.txt  ConnectionSubsys.hpp  IEEE_13_Node_With_Houses.glm  Market_Controller_House_example.glm  demand.cpp  main.cpp  main.hpp  market.cpp  remote.hpp  splitstring.hpp  test.sh
